#259 - step 1: introduce joda-money and refactor existing code